# Heima-legacy

./: .gitignore  README.md  heima
core/: Cargo.toml
core/src/: api.rs  core.rs  devices.rs  error.rs  json.rs  log.rs  main.rs  model.rs  sse.rs  weather.rs  zwave.rs
doc/: Cargo.toml  _desc.txt  concept.sketch  device.md  mockup.sketch
doc/icons-weather-forecast/license/: license.html
doc/my-icons-collection/eps/: arrows-1.eps  arrows-2.eps  arrows-3.eps  arrows.eps  bathtub.eps  bed.eps  business-1.eps  business-2.eps  business.eps  light.eps  mobile.eps  robot.eps  sofa-3.eps  technology-5.eps  technology-6.eps  technology-8.eps  technology.eps
doc/my-icons-collection/font/: Flaticon.eot  _flaticon.scss  flaticon.css  flaticon.html
doc/my-icons-collection/psd/: arrows-1.psd  arrows-2.psd  arrows-3.psd  arrows.psd  bathtub.psd  bed.psd  business-1.psd  business-2.psd  business.psd  light.psd  mobile.psd  robot.psd  sofa-3.psd  technology-5.psd  technology-6.psd  technology-8.psd  technology.psd
doc/presentation/: heima.html
runtime/: config.toml  devices.json
runtime/www/: index.html
ui/: index.ios.js  index.web.js  package.json  webpack.config.js
ui/android/: settings.gradle
ui/android/app/: build.gradle
ui/ios/ui.xcodeproj/: project.pbxproj
ui/src/: App.js  Device.js  DeviceHandler.js  Header.js  Slider.js  Test.js
ui/src/cards/: Sun.js  Switch.js  Weather.js
ui/src/devices/: SwitchDevice.js  WeatherDevice.js
ui/src/icons/: Cloud.js  Cloudy.js  (+15 more)
web-ui-old/: README.md  index.html  package.json
web-ui-old/src/: App.vue  main.js  ws.js
(+13 files in other folders)
